add slot model
